--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>GuiStein</title>
     <link rel="stylesheet" href="index.css">
 </head>
-    <h1>Meu Site</h1>
+    <h1 >Meu Site</h1>
+    <hr>
 <body>
     <nav>
         <ul>
@@ -25,7 +26,7 @@
        
 
         <header>
-            <div class="center"><img src="./img/eu.jpg" alt=""> </div>
+            <div class="center"><img src="./img/i.png" alt=""> </div>
             <h1>Guilherme Stein</h1> 
             <h2>Estudante de Sistemas de informação</h2>
         </header>
