--- a/meuproject.html
+++ b/meuproject.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário</title>
+    <link rel="stylesheet" href="meuproject.css">
 </head>
 <body>
-    <h1>Contato</h1>
+    <h1>Formulário</h1>
     <form action="" method="get">
         <label for="">Nome:</label>
         <input type="text" size="20" id="Inome" name="Inome" placeholder="Digite o seu Nome" required>
@@ -15,7 +16,9 @@
         <input type="number" id="Iidade" name="Iidade" placeholder="Digite a sua idade"> 
         <br><br>
         <button type="submit">Submit</button>
-        <button type="reset">Clean</button>
+        <button type="reset">Clean</button> 
+
+        <button onclick="history.back()">Go Back</button>
         
 
     </form>
