--- a/Site/contato.html
+++ b/Site/contato.html
@@ -1,1 +1,25 @@
-contatos
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    
+</head>
+<body>
+    <nav>
+        <ul>
+            <li>
+                <a href="tabuada.html">Tabuada</a>
+            </li>
+            <li>
+                <a href="imc.html">imc</a>
+            </li>
+            <li>
+                <a href="calculadora.html">Calculadora Viagem</a>
+            </li>
+        </ul> 
+    </nav> 
+    
+</body>
+</html>
