--- a/Site/index.html
+++ b/Site/index.html
@@ -18,7 +18,7 @@
                 <a href="meuproject.html">Meus Projetos</a>
             </li>
             <li>
-                <a href="contato.html">Contato</a>
+                <a href="contato.html">Atividades JavaScript</a>
             </li>
         </ul> 
     </nav> 
