--- a/Site/index.html
+++ b/Site/index.html
@@ -26,18 +26,27 @@
        
 
         <header>
-            <div class="center"><img src="./img/i.png" alt=""> </div>
+            <div class="center"><img src="./img/eu.jpg" alt=""> </div>
             <h1>Guilherme Stein</h1> 
             <h2>Estudante de Sistemas de informação</h2>
         </header>
 
         <main>
-            <section><h3> sobre mim</h3></section>
-            <p> Lorem ipsum dolor sit amet. Sit numquam soluta aut consequatur iste aut sint placeat ut quod placeat.
-                 Et officia voluptates et possimus harum 33 reprehenderit internos 33 harum nisi ea nulla 
-                 voluptatem et 
-                 consequuntur quibusdam! 
-                 Id dicta quam sed perferendis maxime et deleniti voluptatibus. </p>
+            <section>
+                <h3>Sobre Mim</h3>
+            </section>
+            <p>
+                Olá! Eu sou Guilherme Stein, um entusiasta de tecnologia e estudante de Sistemas de Informação. Desde que iniciei minha jornada acadêmica nesse campo fascinante, tenho explorado o vasto universo da computação e suas aplicações práticas.
+            </p>
+            <p>
+                Minha paixão pela resolução de problemas e pela criação de soluções inovadoras impulsionou meu interesse em Sistemas de Informação. Ao longo dos meus estudos, tenho adquirido conhecimentos sólidos em programação, análise de sistemas, e gerenciamento de dados.
+            </p>
+            <p>
+                Além das disciplinas acadêmicas, busco constantemente expandir meus horizontes participando de projetos práticos e mantendo-me atualizado com as últimas tendências tecnológicas. Acredito que a combinação de teoria e prática é essencial para um profissional de Sistemas de Informação bem-sucedido.
+            </p>
+            <p>
+                Estou animado para enfrentar novos desafios, aprender continuamente e contribuir para o avanço da tecnologia. Seja desenvolvendo software inovador ou trabalhando em projetos colaborativos, estou dedicado a construir um futuro sólido na área de Sistemas de Informação.
+            </p>
         </main>
 </body>
 </html>
